--- a/LifeScheduler.Backend/LifeScheduler.Backend.csproj
+++ b/LifeScheduler.Backend/LifeScheduler.Backend.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>LifeScheduler.Backend.ApiModels</RootNamespace>
+    <RootNamespace>LifeScheduler.Backend</RootNamespace>
   </PropertyGroup>
 
 </Project>
